--- a/anthony/embeds/tree-port-graph.html
+++ b/anthony/embeds/tree-port-graph.html
@@ -38,7 +38,7 @@
 
     <script type="text/babel">
         const TreeVisualizer = () => {
-            const [inputText, setInputText] = React.useState('pqr(xyz,abc)');
+            const [inputText, setInputText] = React.useState('b(x,y)');
             const [graphData, setGraphData] = React.useState({ nodes: [], links: [] });
 
             const examples = [
